--- a/Experiments/Exp1_Kernel_Alignment.ipynb
+++ b/Experiments/Exp1_Kernel_Alignment.ipynb
@@ -222,7 +222,7 @@
     "plt.figure(figsize=(4, 3))\n",
     "plt.xlabel(\"Transformer Block Number\", fontsize = 12)\n",
     "plt.ylabel(\"Kernel Alignment\", fontsize = 12)\n",
-    "plt.title(\"Kernel Alignment on dataset \" + str(dataset_index) + \"\\n model: \" + ICL_model_name + \"\\ntoken type: \" + ICL_selected_token_type, fontsize = 12)\n",
+    "plt.title(\"Kernel Alignment on dataset \" + str(dataset_index) + \"\\n model: \" + ICL_model_name + \"\\ntoken type: \" + ICL_selected_token_type + \", k: \" + str(k) , fontsize = 12)\n",
     "plt.plot(avg_kernel_alignment_for_plot, label=ICL_selected_token_type, color=\"blue\")\n",
     "plt.plot(avg_reference_kernel_alignment, label=\"Controlled Experiment\", color=\"gray\")\n",
     "plt.axhline(0.125, color = \"black\", linestyle = \"--\", linewidth = 1, label = \"Random Baseline\")\n",
