--- a/Experiments/Exp1_Kernel_Alignment.ipynb
+++ b/Experiments/Exp1_Kernel_Alignment.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "This experiment is to calculate the kernel alignment between the ICL hidden states and the sentence embedding. Control the parameters differently will make you get the Fig. 2 Left (by `ICL_selected_token_type`) and Middle (by `k`).\n",
     "\n",
-    "Author: Hakaze Cho, yfzhao@jaist.ac.jp\n",
+    "Author: Hakaze Cho, yfzhao@jaist.ac.jp, 2024/08\n",
     "\n",
-    "Organized and modified by: Hakaze Cho, 2025/01/26"
+    "Organized, commented, and modified by: Hakaze Cho, 2025/01/26"
    ]
   },
   {
@@ -38,18 +38,18 @@
    "source": [
     "# Cell 1: Import libraries and change the working directory.\n",
     "\n",
-    "## Import libraries\n",
-    "import os\n",
-    "from util import load_model_and_data, kernel_alignment, inference\n",
-    "import StaICC\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "## Change the working directory\n",
+    "import os\n",
     "try:\n",
     "    # Change to the path from your working directory to the directory containing the README.md file.\n",
     "    os.chdir(\"ICL_Inference_Dynamics_Released\") \n",
     "except:\n",
     "    print(\"Already in the correct directory or the directory does not exist.\")\n",
+    "\n",
+    "## Import libraries\n",
+    "from util import load_model_and_data, kernel_alignment, inference\n",
+    "import StaICC\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "## Some definations for the plots.\n",
     "plt.style.use('default')\n",
@@ -80,7 +80,7 @@
     "encoder_model_name = \"BAAI/bge-m3\"\n",
     "\n",
     "## The huggingface token to access the model. If you use the Llama model, you need to set this.\n",
-    "huggingface_token = 'your token here'\n",
+    "huggingface_token = \"your token here\"\n",
     "\n",
     "\n",
     "# Experiment parameters\n",
