--- a/Experiments/Exp1_Kernel_Alignment.ipynb
+++ b/Experiments/Exp1_Kernel_Alignment.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**Official implementation of paper \"Revisiting In-context Learning Inference Circuit in Large Language Models\" (ICLR 2025)**:\n",
     "\n",
-    "### Source code for the Experiment 1 for Figure 2 Left and Middle.\n",
+    "### The Kernel Alignment to the Reference Sentence Embedding\n",
     "\n",
     "This experiment is to calculate the kernel alignment between the ICL hidden states and the sentence embedding. Control the parameters differently will make you get the Fig. 2 Left (by `ICL_selected_token_type`) and Middle (by `k`).\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "# Experiment parameters\n",
     "\n",
-    "## The selected token type to calculate the KA. Alternative: \"none\" (natural ICL sample end), \"label_words\", \"last_sentence_token\".\n",
+    "## The selected token type to calculate the KA. Alternative: \"none\" (forerunner token s), \"label_words\" (y), \"last_sentence_token\" (x).\n",
     "ICL_selected_token_type = \"label_words\" \n",
     "\n",
     "## The demonstration numbers. Recommended: 0, 1, 2, 4, 8, 12.\n",
