--- a/Experiments/Exp1_Query_PPL.ipynb
+++ b/Experiments/Exp1_Query_PPL.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**Official implementation of paper \"Revisiting In-context Learning Inference Circuit in Large Language Models\" (ICLR 2025)**:\n",
     "\n",
-    "### Source code for the Experiment 1 for Figure 2 Right.\n",
+    "### The LM Loss of the Query on the ICL Model\n",
     "\n",
     "This experiment is to calculate the LM loss of the query on the ICL model, to get the x-axis of Fig. 2 Right. Augmented with the individual kernel alignment data from the results of `Exp1_Kernel_Alignment.ipynb`, you can get the Fig. 2 Right.\n",
     "\n",
@@ -94,47 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2f80c8eb-0a65-4ccd-a4f2-6daa6167f5d2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data...\n",
-      "\n",
-      "1 in 10 Data loaded:  GLUE-SST2 \n",
-      "\n",
-      "2 in 10 Data loaded:  rotten_tomatoes \n",
-      "\n",
-      "3 in 10 Data loaded:  financial_phrasebank \n",
-      "\n",
-      "4 in 10 Data loaded:  SST5 \n",
-      "\n",
-      "5 in 10 Data loaded:  TREC \n",
-      "\n",
-      "6 in 10 Data loaded:  AGNews \n",
-      "\n",
-      "7 in 10 Data loaded:  Subjective \n",
-      "\n",
-      "8 in 10 Data loaded:  tweet_eval_emotion \n",
-      "\n",
-      "9 in 10 Data loaded:  tweet_eval_hate \n",
-      "\n",
-      "10 in 10 Data loaded:  hate_speech_18 \n",
-      "\n",
-      "Data loaded successfully.\n",
-      "\n",
-      "Initializing experimentor on k = 4...\n",
-      "\n",
-      "Ready.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 3: Load the data and build the test inputs.\n",
     "\n",
@@ -144,27 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b1a716c6-d637-49ed-bbf4-9ce9a99992cf",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f734ed6255545a0a26916453ad078e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 4: Load the model.\n",
     "\n",
@@ -188,20 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "88ee657f-9b74-465e-81c4-24b7e8728f59",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 512/512 [00:41<00:00, 12.36it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the LM loss of the query.\n",
     "\n",
