--- a/Experiments/Exp2_Centroid_Classifier.ipynb
+++ b/Experiments/Exp2_Centroid_Classifier.ipynb
@@ -135,7 +135,7 @@
     "## The demonstration numbers. Recommended: 0, 1, 2, 4, 8, 12.\n",
     "k = 4 \n",
     "\n",
-    "## The used dataset index from the StaICC library. Alternative: 0, 1, 2, 3, 4, 5.\n",
+    "## The used dataset index from the StaICC library. Alternative: 0, 1, 2, 3, 4, 5. See the README.md for more information.\n",
     "dataset_index = 2 \n",
     "\n",
     "## Force the ICL_model to reload, even the ICL_model is already in the variables. \n",
