--- a/Experiments/Exp1_Kernel_Alignment.ipynb
+++ b/Experiments/Exp1_Kernel_Alignment.ipynb
@@ -91,7 +91,7 @@
     "## The demonstration numbers. Recommended: 0, 1, 2, 4, 8, 12.\n",
     "k = 4 \n",
     "\n",
-    "## The used dataset index from the StaICC library. Alternative: 0, 1, 2, 3, 4, 5.\n",
+    "## The used dataset index from the StaICC library. Alternative: 0, 1, 2, 3, 4, 5. See the README.md for more information.\n",
     "dataset_index = 2 \n",
     "\n",
     "## The used dataset index from the StaICC library for the controlled experiment. Fixed to TEE (index 6).\n",
