--- a/Experiments/Exp3_Forerunner_Token_Head_Counting.ipynb
+++ b/Experiments/Exp3_Forerunner_Token_Head_Counting.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Forerunner Token Head Counting\n",
     "\n",
-    "This experiment is to count the number of forerunner token heads in each layer, and also the maximum copy magnitude, for the Fig. 5 (Middle).\n",
+    "This experiment is to count the number of forerunner token heads in each layer, and also the maximum copy magnitude, for the Fig. 5 (Middle) and Fig. 22 - 25.\n",
     "\n",
     "Author: Hakaze Cho, yfzhao@jaist.ac.jp, 2024/09\n",
     "\n",
@@ -50,7 +50,6 @@
     "from util import load_model_and_data, inference\n",
     "import StaICC\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
     "import pickle\n",
     "import numpy as np\n",
     "\n",
@@ -137,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 5: Load the model. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically skip.\n",
+    "# Cell 4: Load the model. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically skip.\n",
     "\n",
     "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "if not os.path.exists(data_file_name) or experiment_forced_redo:\n",
@@ -156,7 +155,7 @@
     "\n",
     "What you should do:\n",
     "\n",
-    "1. Run the Cell 6 - 8."
+    "1. Run the Cell 5 - 7."
    ]
   },
   {
@@ -168,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 6: Inference the hidden states and save the intermediate results.\n",
+    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically load the results.\n",
     "\n",
     "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "if os.path.exists(data_file_name) and not experiment_forced_redo:\n",
@@ -190,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 7: Calculate the counted times for each attention head.\n",
+    "# Cell 6: Calculate the counted times for each attention head.\n",
     "\n",
     "counted_times_for_each_head = [[0 for i in range(len(inference.get_copy_magnitude_for_single_layer(ICL_hidden_states[1], 0, 0)))] for i in range(len(ICL_hidden_states[1][0]))]\n",
     "for layers in range(len(ICL_hidden_states[1][0])):\n",
@@ -213,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 8: Calculate the counted times summary for each layer.\n",
+    "# Cell 7: Calculate the counted times summary for each layer.\n",
     "\n",
     "mean_max_magnitude = []\n",
     "mean_head_count = []\n",
