--- a/Experiments/Exp4_Induction_Head_Counting.ipynb
+++ b/Experiments/Exp4_Induction_Head_Counting.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Induction Head Counting\n",
     "\n",
-    "This experiment is to count the number of induction heads and correct induction heads in each layer, also calculate the accuracy based on various induction. Results in Fig. 6 (Left, Middle).\n",
+    "This experiment is to count the number of induction heads and correct induction heads in each layer, also calculate the accuracy based on various induction. Results in Fig. 6 (Left, Middle). From the data exloaded from the experiment, Fig. 6 (Right) can be easily obtained.\n",
     "\n",
     "Author: Hakaze Cho, yfzhao@jaist.ac.jp, 2024/08\n",
     "\n",
