--- a/Experiments/Exp2_Centroid_Classifier.ipynb
+++ b/Experiments/Exp2_Centroid_Classifier.ipynb
@@ -26,7 +26,7 @@
     "What you should do:\n",
     "1. [Cell 1] Change to the path from your working directory to the directory containing the README.md file.\n",
     "2. [Cell 2] Define your experiment parameters.\n",
-    "3. Run the Cell 1 and Cell 2."
+    "3. Run the Cell 1 - 5."
    ]
   },
   {
