--- a/Experiments/Exp4_Induction_Head_Subspace_Visualization.ipynb
+++ b/Experiments/Exp4_Induction_Head_Subspace_Visualization.ipynb
@@ -17,6 +17,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85aa1634",
+   "metadata": {},
+   "source": [
+    "**Part I: Import, Define, and Load Everything**\n",
+    "\n",
+    "What you should do:\n",
+    "1. [Cell 1] Change to the path from your working directory to the directory containing the README.md file.\n",
+    "2. [Cell 2] Define your experiment parameters.\n",
+    "3. Run the Cell 1 - 4.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f68597c3",
