--- a/Experiments/Exp5_Ablation.ipynb
+++ b/Experiments/Exp5_Ablation.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Ablation Study\n",
     "\n",
-    "This experiment is to ablate the proposed ICL inference circuit and observe the performance changes, results are in Table 1.\n",
+    "This experiment is to ablate the proposed ICL inference circuit and observe the performance changes, results are in Table 1, 2.\n",
     "\n",
     "Author: Hakaze Cho, yfzhao@jaist.ac.jp, 2024/09\n",
     "\n",
@@ -64,7 +64,8 @@
     "- `\"xi_to_si\"`: disconnect the attention link from every token in the demonstrations to its forerunner token (line 2 in Table 1)\n",
     "- `\"xq_to_sq\"`: disconnect the attention link from every token in the query to its forerunner token (line 3 in Table 1)\n",
     "- `\"si_to_yi\"`: disconnect the attention link from every forerunner token to its label token (line 4 in Table 1)\n",
-    "- `\"yi_to_sq\"`: disconnect the attention link from every label token to the query's forerunner token (line 5 in Table 1)"
+    "- `\"yi_to_sq\"`: disconnect the attention link from every label token to the query's forerunner token (line 5 in Table 1)\n",
+    "- `\"si_to_si\"`: disconnect the attention link from every forerunner token to subsequent forerunner token (Table 2)"
    ]
   },
   {
