--- a/Experiments/Exp3_Forerunner_Token_Head_Counting.ipynb
+++ b/Experiments/Exp3_Forerunner_Token_Head_Counting.ipynb
@@ -86,7 +86,7 @@
     "huggingface_token = \"your token here\"\n",
     "\n",
     "## Use CPU instead of GPU to process this experiment. \n",
-    "## Recommended: Only to use when you have the intermediate results in path `experiment_matrial` (shown below)\n",
+    "## Recommended: Only to use when you have the intermediate results in path `experiment_material` (shown below)\n",
     "cpu_process = False\n",
     "\n",
     "# Experiment parameters\n",
@@ -136,9 +136,9 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 4: Load the model. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically skip.\n",
+    "# Cell 4: Load the model. If the intermediate results in path `experiment_material` (shown below) has been detected, automatically skip.\n",
     "\n",
-    "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
+    "data_file_name = \"experiment_material/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "if not os.path.exists(data_file_name) or experiment_forced_redo:\n",
     "    vars_dict = vars() if \"ICL_model\" in vars() else locals()\n",
     "    if \"ICL_model\" not in vars_dict or model_forced_reload:\n",
@@ -167,9 +167,9 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically load the results.\n",
+    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_material` (shown below) has been detected, automatically load the results.\n",
     "\n",
-    "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
+    "data_file_name = \"experiment_material/\" + ICL_model_name.replace('/', '_')+ \",\" + \",copy_Hidd_att\" + ',' + (\"\" if corr_label else \"wrong,\") + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "if os.path.exists(data_file_name) and not experiment_forced_redo:\n",
     "    with open(data_file_name, 'rb') as f:\n",
     "        ICL_hidden_states = pickle.load(f)\n",
