--- a/Experiments/Exp4_Induction_Head_Subspace_Visualization.ipynb
+++ b/Experiments/Exp4_Induction_Head_Subspace_Visualization.ipynb
@@ -201,9 +201,9 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically load the results.\n",
+    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_material` (shown below) has been detected, automatically load the results.\n",
     "\n",
-    "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_') + \",Hidd_att\" + ',' + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
+    "data_file_name = \"experiment_material/\" + ICL_model_name.replace('/', '_') + \",Hidd_att\" + ',' + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "\n",
     "vars_dict = vars() if \"ICL_hidden_states\" in vars() else locals()\n",
     "if \"ICL_hidden_states\" in vars_dict:\n",
