--- a/Experiments/Exp4_Induction_Head_Counting.ipynb
+++ b/Experiments/Exp4_Induction_Head_Counting.ipynb
@@ -155,9 +155,9 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_matrial` (shown below) has been detected, automatically load the results.\n",
+    "# Cell 5: Inference the hidden states and save the intermediate results. If the intermediate results in path `experiment_material` (shown below) has been detected, automatically load the results.\n",
     "\n",
-    "data_file_name = \"experiment_matrial/\" + ICL_model_name.replace('/', '_') + \",induc_Hidd_att\" + ',' + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
+    "data_file_name = \"experiment_material/\" + ICL_model_name.replace('/', '_') + \",induc_Hidd_att\" + ',' + str(k) + ',' + str(dataset_index + 1) + \".pickle\"\n",
     "if os.path.exists(data_file_name):\n",
     "    with open(data_file_name, 'rb') as f:\n",
     "        ICL_hidden_states = pickle.load(f)\n",
